# ft_lem_in

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  ans  author  bf.py  check.sh  ft_crt_map.c  ft_lem_in.c  ft_lem_in.h  ft_read_map.c  lem-in  lem_in.h  mem_check.sh  output  profile.sh  suurballe.py  test_map  test_solution
lem-in.dSYM/Contents/Resources/DWARF/: lem-in
libft/: Makefile  ft_buff.c  ft_get_next_line.c  ft_putstr.c  ft_realloc.c  ft_strdup.c  ft_strlen.c  ft_strsplit.c
libft/includes/: libft.h  libft.h.gch  libft_compat.h
maps/: 100  1_2_1  4_all_to_all  500  6_all_leaks  crash_map  eror_map  map  map01  map02  map3  map4  map_log  mtrisha.map  qqq_ordered  qqq_ordered2
mat/: 1.mat  10.mat  300.mat  300_split.mat  bad_suurballe_5.mat
py/: consts.py  find_path.py  main.py  map_dump_restore.py  map_generator.py  mat_to_map.py  mprint.py  read.py  suurballe.py  utils.py
src/: arr_functions.c  arr_functions1.c  array.c  array1.c  bellman_ford.c  crt_len_table.c  debug.c  error_handling.c  expand_junctions.c  find_paths.c  free.c  ft_print_functions.c  ft_trnsfr_paths.c  init_matrix.c  lem_in_output.c  lem_in_output1.c  lem_in_read.c  main.c  matrix.c  matrix_init.c  matrix_init1.c  node_collapse.c  path.c  push_relabel.c  remove_inverse_pahts.c  remove_sym.c  select_paths.c  solve.c  stack_functions.c  suurballe.c  suurballe2.c
tests/: main.c
vis/: data.js  index.html  run_vis.py
vis/js/: sketch.js
